kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: musixtream
  labels:
    name: musixtream
