kubernetes/musixtream-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: musixtream-frontend
  namespace: musixtream
spec:
  replicas: 1
  selector:
    matchLabels:
      app: musixtream
      tier: frontend
  template:
    metadata:
      labels:
        app: musixtream
        tier: frontend
    spec:
      containers:
        - name: musixtream-frontend
          image: dudesjef/musixtream-frontend
          ports:
            - containerPort: 3000
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      automountServiceAccountToken: false
