kubernetes/musixtream-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: musixtream-frontend
  namespace: musixtream
spec:
  selector:
    app: musixtream
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
  type: LoadBalancer
