kubernetes/musixtream-frontend.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: musixtream
  name: musixtream
---
apiVersion: v1
kind: Service
metadata:
  name: musixtream-frontend
  namespace: musixtream
spec:
  selector:
    app: musixtream
    tier: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 31000
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: musixtream-frontend
  namespace: musixtream
spec:
  replicas: 1
  selector:
    matchLabels:
      app: musixtream
      tier: frontend
  template:
    metadata:
      labels:
        app: musixtream
        tier: frontend
    spec:
      containers:
        - name: musixtream-frontend
          image: dudesjef/musixtream-frontend
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
      restartPolicy: Always
      automountServiceAccountToken: false
