kubernetes/musixtream-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: musixtream-frontend-ingress
  namespace: musixtream
spec:
  rules:
    - host: musixtream.com
      http:
        paths:
          - path: /
            pathType: Prefix
            frontend:
              service:
                name: musixtream-frontend-service
                port:
                  number: 3000
